changed alignment of connectedness. fixes #960

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -808,6 +808,7 @@ table.vert-center td {
     padding-left: 15px;
     font-size: 80%;
     font-weight: bold;
+    vertical-align: bottom;
 }
 
 #galaxy-connectedness-help {
